netcdf4/src/main/java/ucar/nc2/jni/netcdf/netcdf.h

/*! The nc_type type is just an int. */
typedef int nc_type;
/*
 *  The netcdf external data types
 */
#define	NC_NAT 	        0	/**< Not A Type */
#define	NC_BYTE         1	/**< signed 1 byte integer */
#define	NC_CHAR 	2	/**< ISO/ASCII character */
#define	NC_SHORT 	3	/**< signed 2 byte integer */
#define	NC_INT 	        4	/**< signed 4 byte integer */
#define	NC_FLOAT 	5	/**< single precision floating point number */
#define	NC_DOUBLE 	6	/**< double precision floating point number */
#define	NC_UBYTE 	7	/**< unsigned 1 byte int */
#define	NC_USHORT 	8	/**< unsigned 2-byte int */
#define	NC_UINT 	9	/**< unsigned 4-byte int */
#define	NC_INT64 	10	/**< signed 8-byte int */
#define	NC_UINT64 	11	/**< unsigned 8-byte int */
#define	NC_STRING 	12	/**< string */
#define NC_MAX_ATOMIC_TYPE NC_STRING
/* The following are use internally in support of user-defines
 * types. They are also the class returned by nc_inq_user_type. */
#define	NC_VLEN 	13	/**< vlen types */
#define	NC_OPAQUE 	14	/**< opaque types */
#define	NC_ENUM 	15	/**< enum types */
#define	NC_COMPOUND 	16	/**< compound types */
#define NC_FILL		0	/**< Argument to nc_set_fill() to clear NC_NOFILL */
#define NC_NOFILL	0x100	/**< Argument to nc_set_fill() to turn off filling of data. */
#define NC_NOWRITE	0	/**< Set read-only access for nc_open(). */
#define NC_WRITE    	0x0001	/**< Set read-write access for nc_open(). */
#define NC_CLOBBER	 0       /**< Destroy existing file. Mode flag for nc_create(). */
#define NC_NOCLOBBER	 0x0004	/**< Don't destroy existing file. Mode flag for nc_create(). */
#define NC_64BIT_OFFSET  0x0200  /**< Use large (64-bit) file offsets. Mode flag for nc_create(). */
#define NC_NETCDF4       0x1000  /**< Use netCDF-4/HDF5 format. Mode flag for nc_create(). */
#define NC_CLASSIC_MODEL 0x0100 /**< Enforce classic model. Mode flag for nc_create(). */
#define NC_DISKLESS      0x0002  /**< Create a diskless file. Mode flag for nc_create(). */
/** Turn on MPI I/O.
Use this in mode flags for both nc_create() and nc_open(). */
#define NC_MPIIO       0x2000 
/** Turn on MPI POSIX I/O.
Use this in mode flags for both nc_create() and nc_open(). */
#define NC_MPIPOSIX    0x4000
#define NC_PNETCDF     0x8000	/**< Use parallel-netcdf library. Mode flag for nc_open(). */
/** Format specifier for nc_set_default_format().  Starting with
 * version 3.6, there are different format netCDF files. 4.0
 * introduces the third one. \see netcdf_format
 */
/**@{*/
#define NC_FORMAT_CLASSIC (1)
#define NC_FORMAT_64BIT   (2)
#define NC_FORMAT_NETCDF4 (3)
#define NC_FORMAT_NETCDF4_CLASSIC  (4)
/** Size argument to nc_def_dim() for an unlimited dimension. */
#define NC_UNLIMITED 0L
/** Attribute id to put/get a global attribute. */
#define NC_GLOBAL -1
/** 
Maximum for classic library.

In the classic netCDF model there are maximum values for the number of
dimensions in the file (\ref NC_MAX_DIMS), the number of global or per
variable attributes (\ref NC_MAX_ATTRS), the number of variables in
the file (\ref NC_MAX_VARS), and the length of a name (\ref
NC_MAX_NAME).

This maximum is enforced by the interface, to facilitate writing
applications and utilities.  However, nothing is statically allocated
to this size internally.

This maximum is not used for netCDF-4/HDF5 files unless they were
created with the ::NC_CLASSIC_MODEL flag.

As a rule, NC_MAX_VAR_DIMS <= NC_MAX_DIMS.
*/
/**@{*/
#define NC_MAX_DIMS	1024	
#define NC_MAX_ATTRS	8192	
#define NC_MAX_VARS	8192	
#define NC_MAX_NAME	256	
#define NC_MAX_VAR_DIMS	1024 /**< max per variable dimensions */
/**@}*/

/** In HDF5 files you can set storage for each variable to be either
 * contiguous or chunked, with nc_def_var_chunking().  This define is
 * used there. */
/**@{*/
#define NC_CHUNKED    0
#define NC_CONTIGUOUS 1
#define	NC_NOERR	0   /**< No Error */
EXTERNL int ncerr;
EXTERNL const char *
nc_inq_libvers(void);
EXTERNL const char *
nc_strerror(int ncerr);
EXTERNL int
nc_create(const char *path, int cmode, int *ncidp);
EXTERNL int
nc_open(const char *path, int mode, int *ncidp);
/* Given a location id, return the number of groups it contains, and
 * an array of their locids. */
EXTERNL int
nc_inq_grps(int ncid, int *numgrps, int *ncids);
/* Given locid, find name of group. (Root group is named "/".) */
EXTERNL int
nc_inq_grpname(int ncid, char *name);
/* Given ncid, find full name and len of full name. (Root group is
 * named "/", with length 1.) */
EXTERNL int
nc_inq_grpname_full(int ncid, size_t *lenp, char *full_name);
/* Given ncid, find len of full name. */
EXTERNL int
nc_inq_grpname_len(int ncid, size_t *lenp);
/* Get a list of ids for all the variables in a group. */
EXTERNL int 
nc_inq_varids(int ncid, int *nvars, int *varids);
/* Find all dimids for a location. This finds all dimensions in a
 * group, or any of its parents. */
EXTERNL int 
nc_inq_dimids(int ncid, int *ndims, int *dimids, int include_parents);
/* Find all user-defined types for a location. This finds all
 * user-defined types in a group. */
EXTERNL int 
nc_inq_typeids(int ncid, int *ntypes, int *typeids);
/* Get the name and size of a type. */
EXTERNL int
nc_inq_type(int ncid, nc_type xtype, char *name, size_t *size);
/* Find out about a user defined type. */
EXTERNL int
nc_inq_user_type(int ncid, nc_type xtype, char *name, size_t *size, 
		 nc_type *base_nc_typep, size_t *nfieldsp, int *classp);
/* Read an attribute of any type. */
EXTERNL int
nc_get_att(int ncid, int varid, const char *name, void *ip);
/* Get information about an enum type: its name, base type and the
 * number of members defined. */
EXTERNL int
nc_inq_enum(int ncid, nc_type xtype, char *name, nc_type *base_nc_typep, 
	    size_t *base_sizep, size_t *num_membersp);
/* Get information about an enum member: a name and value. Name size
 * will be <= NC_MAX_NAME. */
EXTERNL int
nc_inq_enum_member(int ncid, nc_type xtype, int idx, char *name, 
		   void *value);
/* Get information about an opaque type. */
EXTERNL int
nc_inq_opaque(int ncid, nc_type xtype, char *name, size_t *sizep);
/* Read entire var of any type. */
EXTERNL int
nc_get_var(int ncid, int varid,  void *ip);
/* Read one value. */
EXTERNL int
nc_get_var1(int ncid, int varid,  const size_t *indexp, void *ip);
/* Define chunking for a variable. This must be done after nc_def_var
   and before nc_enddef. */
EXTERNL int
nc_def_var_chunking(int ncid, int varid, int storage, const size_t *chunksizesp);
/* Set the fill mode (classic or 64-bit offset files only). */
EXTERNL int
nc_set_fill(int ncid, int fillmode, int *old_modep);
/* Set the default nc_create format to NC_FORMAT_CLASSIC,
 * NC_FORMAT_64BIT, NC_FORMAT_NETCDF4, NC_FORMAT_NETCDF4_CLASSIC. */
EXTERNL int
nc_set_default_format(int format, int *old_formatp);
EXTERNL int
nc_close(int ncid);
EXTERNL int 
nc_inq_ndims(int ncid, int *ndimsp);
EXTERNL int 
nc_inq_nvars(int ncid, int *nvarsp);
EXTERNL int 
nc_inq_natts(int ncid, int *nattsp);
/* The next function is for NetCDF-4 only */
EXTERNL int 
nc_inq_unlimdims(int ncid, int *nunlimdimsp, int *unlimdimidsp);
/* Added in 3.6.1 to return format of netCDF file. */
EXTERNL int
nc_inq_format(int ncid, int *formatp);
EXTERNL int
nc_inq_dim(int ncid, int dimid, char *name, size_t *lenp);
EXTERNL int 
nc_inq_dimname(int ncid, int dimid, char *name);
EXTERNL int 
nc_inq_atttype(int ncid, int varid, const char *name, nc_type *xtypep);
EXTERNL int 
nc_inq_attlen(int ncid, int varid, const char *name, size_t *lenp);
EXTERNL int
nc_inq_attname(int ncid, int varid, int attnum, char *name);
EXTERNL int
nc_get_att_text(int ncid, int varid, const char *name, char *ip);
EXTERNL int
nc_get_att_uchar(int ncid, int varid, const char *name, unsigned char *ip);
EXTERNL int
nc_get_att_schar(int ncid, int varid, const char *name, signed char *ip);
EXTERNL int
nc_get_att_short(int ncid, int varid, const char *name, short *ip);
EXTERNL int
nc_get_att_int(int ncid, int varid, const char *name, int *ip);
EXTERNL int
nc_get_att_float(int ncid, int varid, const char *name, float *ip);
EXTERNL int
nc_get_att_double(int ncid, int varid, const char *name, double *ip);
EXTERNL int
nc_get_att_ushort(int ncid, int varid, const char *name, unsigned short *ip);
EXTERNL int
nc_get_att_uint(int ncid, int varid, const char *name, unsigned int *ip);
EXTERNL int
nc_get_att_longlong(int ncid, int varid, const char *name, long long *ip);
EXTERNL int
nc_get_att_ulonglong(int ncid, int varid, const char *name, 
		     unsigned long long *ip);
EXTERNL int
nc_get_att_string(int ncid, int varid, const char *name, char **ip);
EXTERNL int
nc_inq_var(int ncid, int varid, char *name, nc_type *xtypep, 
	   int *ndimsp, int *dimidsp, int *nattsp);
EXTERNL int
nc_inq_varid(int ncid, const char *name, int *varidp);
EXTERNL int 
nc_inq_vardimid(int ncid, int varid, int *dimidsp);
EXTERNL int 
nc_inq_varnatts(int ncid, int varid, int *nattsp);
EXTERNL int
nc_get_var1_text(int ncid, int varid, const size_t *indexp, char *ip);
EXTERNL int
nc_get_var1_schar(int ncid, int varid, const size_t *indexp,
		  signed char *ip);
EXTERNL int
nc_get_var1_short(int ncid, int varid, const size_t *indexp,
		  short *ip);
EXTERNL int
nc_get_var1_int(int ncid, int varid, const size_t *indexp, int *ip);
EXTERNL int
nc_get_var1_float(int ncid, int varid, const size_t *indexp, float *ip);
EXTERNL int
nc_get_var1_double(int ncid, int varid, const size_t *indexp, double *ip);
EXTERNL int
nc_get_var1_ushort(int ncid, int varid, const size_t *indexp, 
		   unsigned short *ip);
EXTERNL int
nc_get_var1_uint(int ncid, int varid, const size_t *indexp, 
		 unsigned int *ip);
EXTERNL int
nc_get_var1_longlong(int ncid, int varid, const size_t *indexp, 
		  long long *ip);
EXTERNL int
nc_get_var1_ulonglong(int ncid, int varid, const size_t *indexp, 
		   unsigned long long *ip);
EXTERNL int
nc_get_var1_string(int ncid, int varid, const size_t *indexp, 
		   char **ip);
EXTERNL int
nc_get_var_text(int ncid, int varid, char *ip);
EXTERNL int
nc_get_var_schar(int ncid, int varid, signed char *ip);
EXTERNL int
nc_get_var_short(int ncid, int varid, short *ip);
EXTERNL int
nc_get_var_int(int ncid, int varid, int *ip);
EXTERNL int
nc_get_var_float(int ncid, int varid, float *ip);
EXTERNL int
nc_get_var_double(int ncid, int varid, double *ip);
EXTERNL int
nc_get_var_ushort(int ncid, int varid, unsigned short *ip);
EXTERNL int
nc_get_var_uint(int ncid, int varid, unsigned int *ip);
EXTERNL int
nc_get_var_longlong(int ncid, int varid, long long *ip);
EXTERNL int
nc_get_var_ulonglong(int ncid, int varid, unsigned long long *ip);
EXTERNL int
nc_get_var_string(int ncid, int varid, char **ip);
EXTERNL int
nc_get_att_ubyte(int ncid, int varid, const char *name, 
		 unsigned char *ip);
EXTERNL int
nc_get_var1_ubyte(int ncid, int varid, const size_t *indexp, 
		  unsigned char *ip);
EXTERNL int
nc_get_var_ubyte(int ncid, int varid, unsigned char *ip);
/**@}*/


/*
 * Global error status
 */
EXTERNL int ncerr;